[package]
name = "otc"
version = "0.1.2"
edition = "2021"
description = "Oh My Posh theme Chooser"
repository = "https://github.com/nrdrch/otc"
categories = ["command-line-utilities"]
license = "MIT"
[dependencies]
colored = "2.0.0"
dirs = "5.0.1"
fs_extra = "1.3.0"
spinners = "4.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
